<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heart Rate Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="no_heart_rate">--</string>

    <string name="tab_heart_rate">Heart Rate</string>
    <string name="tab_timer">Timer</string>

    <string name="ble_not_supported">Bluetooth LE not supported.</string>
    <string name="unknown_device">Unknown device.</string>
    <string name="connect_button_text">CONNECT</string>

    <string name="status_connect">CONNECT</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_scanning">Scanning…</string>

    <string name="scan_dialog_title">Scanning for monitor</string>
    <string name="scan_dialog_scanning">Scanning…</string>
    
    <string name="hiit_setup_warm_up">Warm-up:</string>
    <string name="hiit_setup_intervals">Intervals:</string>
    <string name="hiit_setup_work">Work:</string>
    <string name="hiit_setup_rest">Rest:</string>
    <string name="hiit_setup_cool_down">Cool-down:</string>
    <string name="hiit_setup_start">START</string>

    <string name="hiit_timer_state_warm_up">Warm Up</string>
    <string name="hiit_timer_state_work">Work</string>
    <string name="hiit_timer_state_rest">Rest</string>
    <string name="hiit_timer_state_cool_down">Cool Down</string>
    <string name="hiit_timer_rep_counter">Rep %1$d/%2$d</string>
</resources>
