<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- Warm up -->
    <TextView
        style="@style/HiitSetupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/hiit_setup_warm_up" />

    <Button
        android:id="@+id/warm_up_time"
        style="@style/RedBorderlessButton.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:includeFontPadding="true"
        android:text="5:00" />

    <!-- Cool down -->
    <TextView
        style="@style/HiitSetupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/hiit_setup_cool_down" />

    <Button
        android:id="@+id/cool_down_time"
        style="@style/RedBorderlessButton.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:text="5:00" />

    <!-- Intervals -->
    <TextView
        style="@style/HiitSetupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/hiit_setup_intervals" />

    <Button
        android:id="@+id/intervals_value"
        style="@style/RedBorderlessButton.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="7" />

    <!-- Work period-->
    <TextView
        style="@style/HiitSetupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/hiit_setup_work" />

    <Button
        android:id="@+id/work_time"
        style="@style/RedBorderlessButton.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:text="0:45" />

    <!-- Rest period -->
    <TextView
        style="@style/HiitSetupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/hiit_setup_rest" />

    <Button
        android:id="@+id/rest_time"
        style="@style/RedBorderlessButton.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:text="1:00" />

    <Button
        android:id="@+id/start_button"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="5"
        android:text="@string/hiit_setup_start" />

</merge>